--- a/src/modules/Header/styles.module.scss
+++ b/src/modules/Header/styles.module.scss
@@ -1,9 +1,14 @@
-@use '../../styles/vars' as *;
+@use '@styles/vars' as *;
+@use '@styles/mixins' as *;
 
 .header {
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   background: $color-bg-secondary;
   z-index: 100;
@@ -14,8 +19,8 @@
   &__menu {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+    gap: 16px;
   }
 
   &__menuItem {
