--- a/src/modules/Header/styles.module.scss
+++ b/src/modules/Header/styles.module.scss
@@ -2,9 +2,6 @@
 @use '@styles/mixins' as *;
 
 .header {
-  position: fixed;
-  left: 0;
-  top: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -26,5 +23,10 @@
   &__menuItem {
     color: $color-text-primary;
     padding: 8px 16px;
+  }
+
+  &__sidebar {
+    display: flex;
+    color: white;
   }
 }
