--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -3,6 +3,7 @@ body {
   height: 100%;
 }
 body {
+  box-sizing: border-box;
   font-family: 'Arial', sans-serif;
   font-size: 16px;
   line-height: 1.5;
